[package]
name = "glaive"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
clap = { version = "4.5.20", features = ["derive"] }
itertools = "0.13.0"
reqwest = { version = "0.12.8", features = ["rustls-tls"] }
tokio = { version = "1.41.0", features = ["full"] }

[profile.release]
codegen-units = 1
lto = "fat"
